# TravelVloggers

./: .dockerignore  .gitignore  Dockerfile  NOTES.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  users.py  vloggers.py  vlogs.py
app/api/v2/: router.py
app/api/v2/endpoints/: auth.py  vloggers.py
app/clients/: redis.py  youtube.py
app/clients/v1/: youtube.py
app/core/: config.py  exceptions.py  security.py
app/db/: connection.py  redis.py
app/models/: user.py  vlog.py  vlogger.py
app/models/v1/: vlog.py  vlogger.py
app/repositories/: auth.py  users.py  vloggers.py  vlogs.py
app/repositories/v1/: auth.py  users.py  vloggers.py  vlogs.py
app/repositories/v2/: auth.py  vloggers.py
app/schemas/: user.py  vlog.py  vlogger.py
app/schemas/v1/: vlogger.py
app/schemas/v2/: user.py  vlog.py  vlogger.py
app/services/: auth.py  users.py  vloggers.py  vlogs.py
app/services/v1/: auth.py  users.py  vloggers.py  vlogs.py
app/services/v2/: auth.py  vloggers.py
scripts/: countries.json  seed_countries.py
tests/: conftest.py  test_db.py
tests/api/v1/: test_auth.py  test_users.py  test_vloggers.py  test_vlogs.py
tests/api/v2/: test_auth.py
