[project]
name = "TravelVloggers"
version = "0.1.0"
description = "Backend API that aggregates travel-related video content posted on YouTube"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pwdlib[argon2]>=0.3.0",
    "ruff>=0.15.6",
    "sqlalchemy[asyncio]>=2.0.48",
    "pyjwt>=2.12.1",
    "aiohttp>=3.13.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
